fix: Change content gap

--- a/src/app/home/comic-add-edit-page/comic-add-edit-page.component.scss
+++ b/src/app/home/comic-add-edit-page/comic-add-edit-page.component.scss
@@ -1,7 +1,7 @@
 .content {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 32px;
   padding-bottom: 48px;
 }
 
